--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview --port 4173 --host",
-    "server": "node server.js",
+    "server": "node server/server.js",
     "start": "node server.js",
     "start:prod": "NODE_ENV=production node server.js",
     "pm2:start": "pm2 start pm2.config.js",
